# SellPrivate_Bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
db/: models.py
filters/: is_owner.py  is_private.py
handlers/admin/: setprice.py  stats.py  without_adding.py
handlers/user/: expiration_check.py  purchased.py  stars_payment.py  start.py  sub_info.py  tariff.py
