[project]
name = "sellprivate-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "environs>=15.0.1",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.51",
]
